css/shanti-main.css
/* ... */
.menu-accordion ul ul a:hover,
.menu-accordion ul ul a:focus,
.menu-accordion ul ul a:active {
  background-color: rgba(255, 255, 255, 0.12);
}
.menu-preferences ul li ul{
  border:8px solid #555;
  border-width:12px 0 5px 0;
}
.menu-preferences ul li:last-child ul{
  border:8px solid #555;
  border-width:8px 0 0 0;
}

/* .menu-accordion .sidebar-nav-item {padding-left: 5px;}
.menu-accordion .sidebar-nav-item-icon {padding-right: 5px;} */





ul.menu-main{ 	
  -webkit-box-shadow: -2px 3px 4px rgba(0,0,0,0.175);
	box-shadow: -2px 3px 4px rgba(0,0,0,0.175);
	border-collapse:separate; /* needed by ie9+ with box-shadow */
	overflow:visible !important;
}


ul.menu-main ul li ul li a{
	padding-left:45px; 
	background: #525252;
}


ul.menu-main li.form-group {
	font-size:0.88em;
	line-height:1.44em; 
	height:2.12em;
	vertical-align:middle;
	padding: 0 0 0 30px;
	margin:0;
	display:block;
	background:#555;
}
ul.menu-main li.bottom-trim{ height:12px; line-height:12px; background:#333; border-top:1px solid #505050; }

ul.menu-main li.form-group label{ font-size:1.06em; color:#aaa; margin-left:20px; }
ul.menu-main li.form-group label:hover{ color:#eee; }
ul.menu-main li.form-group .radio-inline{ padding:0; display:block; line-height:1.63em; height:2em; }
ul.menu-main li.form-group .radio-inline>div{ position:relative; top:-2px; right:7px; font-size:.88em; } /* graphic replacement */

ul.menu-main .arrow { float: right; }
/*
ul.menu-main > li a .glyphicon.arrow { font-size: .75em; position:relative; right:-15px; top:7px;	}
ul.menu-main .glyphicon.arrow:before { content:"\e079";}
ul.menu-main .active > a > .glyphicon.arrow:before { content:"\e114";}
*/
ul.menu-main > li a .fa.arrow { font-size: 1.5em; position:relative; right:-15px; top:0px;	}
ul.menu-main .fa.arrow:before { content:"\f104";}
ul.menu-main .active > a > .fa.arrow:before { content:"\f107";}

ul.menu-main .plus-times { float:right ;position:relative; top:3px; right:15px;}
ul.menu-main .fa.plus-times:before {content: "\f067";}
ul.menu-main .active > a > .fa.plus-times { -webkit-transform: rotate(45deg);-moz-transform: rotate(45deg);-ms-transform: rotate(45deg);-o-transform: rotate(45deg);transform: rotate(45deg); filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1); }
ul.menu-main .plus-minus { float: right; }
ul.menu-main .fa.plus-minus:before { content: "\f067"; }
ul.menu-main .active > a > .fa.plus-minus:before { content: "\f068"; }


ul.menu-main li a .icon{
	margin-right:12px;
	font-size:1.25em;
	position:relative;
	top:2px;
}

ul.menu-main>li>a:first-child {
  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; 
	font-weight:normal; 
	font-style:italic;
	font-size:1.5em; 
	line-height:1.5em; 
	height:2.44em;
}
/*----------------------------*/
/*----- END NAVIGATION -------*/
/*----------------------------*/





/*------------------------------------*/
/*----- Audio/Video Thumbnails -------*/
/*------------------------------------*/
.search-results,
.shanti-gallery,
ul.search-results,
ul.shanti-gallery{
	width: 100%;
	margin:0;
	padding:0;
	position:relative;
	/*
 -webkit-column-width: 12em;
 -webkit-column-gap: 1em;  
 -moz-column-width: 12em;
 -moz-column-gap: 1em;
 column-width: 12em;
 column-gap: 1em; */
 /*position:relative;
 top:2em;*/
 -webkit-margin-before: 0;
 -webkit-margin-after: 0;
 -webkit-margin-start: 0;
 -webkit-margin-end: 0;
 -webkit-padding-start: 0;
 
}
/*
ul.search-results > div,
ul.shanti-gallery > div{
	display:inline;
	float:left;
}
*/

.shanti-gallery a,
.shanti-gallery a:hover{ color:#555; border:none !important; 	display:block;}


.shanti-thumbnail { 
	color:#444;
	float:left;
  width:  100%;
  /* max-width: 11.75em; */
	min-height: 18.5em;
	padding: 0;
  margin: 0;
	border-radius: 0.32em;
	background-clip: padding-box;
	background-color: #FFFFFF;	
	display: inline-block;
  position:relative;
  -webkit-box-shadow: 0 3px 3px rgba(50, 50, 50, 0.2750);
	box-shadow:         0 3px 3px rgba(50, 50, 50, 0.2750);
	border-collapse: separate; 
  -webkit-transition: box-shadow 500ms ease;
	-moz-transition: box-shadow 500ms ease;
	-ms-transition: box-shadow 500ms ease;
	-o-transition: box-shadow 500ms ease;
	transition: box-shadow 500ms ease; 
	display:none;
}
.shanti-thumbnail:hover {
	-webkit-box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2250);
  box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2250);
}
.shanti-thumbnail:active {
  -webkit-box-shadow: 0 3px 3px rgba(50, 50, 50, 0.5);
	box-shadow:         0 3px 3px rgba(50, 50, 50, 0.5);
}
.shanti-thumbnail-image {
	width: 100%;
	overflow: hidden;
	border-radius: .32em .32em 0 0;
}
.shanti-thumbnail-image img {
	width: 100%;
	height: auto;
	border: none;
	overflow: hidden;
	border-radius: .32em .32em 0 0;
	background-clip: padding-box;	 /* fix for radius-corner color bleedthrough */
}

.shanti-thumbnail-image a{
	position:relative;	
	overflow: hidden;
	padding:0;
	border-radius: .32em .32em 0 0;
}
.shanti-thumbnail-image i {
	position: absolute;
	top: 0;
	right: 0;
	z-index:100;
	background-color: rgba( 50, 204, 202, 0.8);
	width: 2em;
	height: 1.88em;
	border: none;
	border-radius: 0 0.25em;
	background-clip: padding-box;
	color: white;
	font-size:1.25em;
	line-height:1.83em;
	font-weight:normal;
	text-align:center;
}
.shanti-thumbnail.audio .shanti-thumbnail-image i { background-color: rgba(72, 80, 189, 0.8) !important;}

.shanti-thumbnail-image a .overlay{	
	position:absolute;
	top:0;
	z-index:99;
	width:100%;
	height:100%;
	display:block;	
	background: transparent; /*--- toggle background overlay on-hover ---*/
	cursor:pointer;
	text-align:center;
	border-radius:.32em .32em 0 0;
	background-clip: padding-box;
		  -webkit-transition: all 200ms ease;
	-moz-transition: all 200ms ease;
	-ms-transition: all 200ms ease;
	-o-transition: all 200ms ease;
	transition: all 200ms ease;
}
.shanti-thumbnail-image a:hover .overlay{
	background: rgba(0,0,0, 0.7000);
}
/* ... */

